welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:6: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
		setCouleurBrosse() 
                                ^MethodsPicture:16: error: value gauche is not a member of Unit
		avance() gauche() 
                         ^MethodsPicture:21: error: too many arguments for method faireV: ()Unit
			faireV(color.YELLOW)
                              ^MethodsPicture:22: error: too many arguments for method faireV: ()Unit
			faireV(color.RED)
                              ^MethodsPicture:23: error: too many arguments for method faireV: ()Unit
			faireV(color.BLUE)
                              ^MethodsPicture:24: error: too many arguments for method faireV: ()Unit
			faireV(color.GREEN)
                              ^MethodsPicture:36: error: value gauche is not a member of Unit
					faireV3() gauche() 
                                                  ^MethodsPicture:38: error: value droite is not a member of Unit
						avance() } droite() }
                                                           ^